# MCL

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MCL  MCL.pro  README  changelog.txt
Include/: Functions.hpp  MCLError.h  Shared.h  TPoint2D.hpp  TVector3.hpp  TVector3D.hpp  Trigonometry.hpp  angle.h  common.h  config.h  constants.h  error.h  functions.hpp  numeric.h  trigonometry.hpp
Include/Statistics/: MinMax.hpp  mean.hpp  median.hpp  stdev.hpp  sum.hpp  variance.hpp
Include/Utility/: sort.hpp
Source/: MCLError.cpp  Shared.cpp  angle.cpp  common.cpp  error.cpp  numeric.cpp
Test/: StatisticsTest.cpp
include/: TPoint2D.hpp  TVector3D.hpp  TVectorND.hpp  angle.h  common.h  config.h  constants.h  definitions.h  exceptions.h  fraction.hpp  functions.hpp  numeric.h  point2D.hpp  trigonometry.hpp  vector2P.hpp  vectorN.hpp
include/financial/: XIRR.hpp  futureValue.hpp  xirr.h  xirr.hpp
include/functions/: gcd.hpp  linearRegression.hpp  quadraticSolver.hpp
include/statistics/: MinMax.hpp  anderson-darling.hpp  exponential.hpp  kolmogorov-smirnov.hpp  mean.hpp  median.hpp  minmax.hpp  percentile.hpp  stdev.hpp  sum.hpp  variance.hpp
include/statistics/distributionFunctions/: chi-square.h  weibull.hpp
include/utility/: sort.hpp
source/: Shared.cpp  angle.cpp  common.cpp  error.cpp  numeric.cpp
source/financial/: xirr.cpp
test/: CMakeLists.txt  Variance.ods  data.csv  main.cpp
test/financial/: test_xirr.cpp
test/functions/: linearRegression.cpp
test/statistics/: anderson-darling_test.cpp  mean_test.cpp  median_test.cpp  percentile_test.cpp  stdev_test.cpp  sum_test.cpp
test/statistics/distributionFunctions/: weibull_test.cpp
