# MCL Library CMAKE file

CMAKE_MINIMUM_REQUIRED(VERSION 3.14 FATAL_ERROR)

PROJECT(MCL)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

IF(NOT DEFINED $CMAKE_BINARY_DIR)
  IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    SET(BUILD_FOR_WIN TRUE)
    SET(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/win64)
  ELSE()
    SET(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/linux)
  ENDIF()
ENDIF(NOT DEFINED $CMAKE_BINARY_DIR)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/MCL)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/../GCL)

ADD_LIBRARY(MCL ${PROJECT_SOURCE_DIR}/source/financial/xirr.cpp
                ${PROJECT_SOURCE_DIR}/source/angle.cpp
                ${PROJECT_SOURCE_DIR}/source/common.cpp
                ${PROJECT_SOURCE_DIR}/source/numeric.cpp
                ${PROJECT_SOURCE_DIR}/source/Shared.cpp)


ENABLE_TESTING()

#FIND_PACKAGE(Boost COMPONENTS unit_test_framework REQUIRED)
#INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

ADD_SUBDIRECTORY(test)
